objects/ClientAsset__c.object
<CustomObject>
    <description>To track assets owned by clients.</description>
    <fields>
        <fullName>AccountBalance__c</fullName>
        <label>Account Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AccountName__c</fullName>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountNumber__c</fullName>
        <label>Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <type>Address</type>
    </fields>
    <fields>
        <fullName>AssetType__c</fullName>
        <label>Asset Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Certificate of Deoposit - CDs</fullName>
                </value>
                <value>
                    <fullName>Checking</fullName>
                </value>
                <value>
                    <fullName>Client Sweat Equity</fullName>
                </value>
                <value>
                    <fullName>Educational Saving Programs</fullName>
                </value>
                <value>
                    <fullName>Investments</fullName>
                </value>
                <value>
                    <fullName>IRA/Keogh Accounts</fullName>
                </value>
                <value>
                    <fullName>Mattress Money</fullName>
                </value>
                <value>
                    <fullName>Retirement (401k/ESOP/SEP/Other)</fullName>
                </value>
                <value>
                    <fullName>Savings</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AutomobileMake__c</fullName>
        <label>Automobile Make</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CashDeposit__c</fullName>
        <label>Cash Deposit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CashValue__c</fullName>
        <label>Cash Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ClientCase__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Case</label>
        <referenceTo>ClientCase__c</referenceTo>
        <relationshipLabel>Client Assets</relationshipLabel>
        <relationshipName>Client_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Client Assets</relationshipLabel>
        <relationshipName>Client_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ExternalID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FaceValue__c</fullName>
        <label>Face Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ModelYear__c</fullName>
        <label>Model Year</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MonthlyGrossRentalIncome__c</fullName>
        <label>Monthly Gross Rental Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MonthlyMortgagePayment__c</fullName>
        <label>Monthly Mortgage Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MonthlyTaxInsuranceMaintenance__c</fullName>
        <label>Monthly Tax, Insurance, &amp; Maintenance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NameofHolder__c</fullName>
        <label>Name of Holder</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberofUnits__c</fullName>
        <label>Number of Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PresentMarketValue__c</fullName>
        <label>Present Market Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PropertyType__c</fullName>
        <label>Property Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Residential</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TotalLines__c</fullName>
        <label>Total Liens</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Client Asset</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CA-{0000}</displayFormat>
        <label>Asset Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Assets</pluralLabel>
    <recordTypes>
        <fullName>Automobiles</fullName>
        <active>true</active>
        <label>Automobiles</label>
    </recordTypes>
    <recordTypes>
        <fullName>Earnest_Money</fullName>
        <active>true</active>
        <label>Earnest Money</label>
    </recordTypes>
    <recordTypes>
        <fullName>Life_Insurance</fullName>
        <active>true</active>
        <label>Life Insurance</label>
    </recordTypes>
    <recordTypes>
        <fullName>Liquid_Assets</fullName>
        <active>true</active>
        <label>Liquid Assets</label>
    </recordTypes>
    <recordTypes>
        <fullName>Real_Estate</fullName>
        <active>true</active>
        <label>Real Estate</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>